--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ code {
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
+  background-color: rgb(0, 0, 0);
+  color: white;
 }
 
 h1 {
@@ -31,7 +33,6 @@ textarea {
   height: 100px;
   width: 500px;
 }
-
 
 /* .input-area {
   display: flex;
