--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,6 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
-  background-color: rgb(0, 0, 0);
-  color: white;
 }
 
 h1 {
@@ -34,11 +18,14 @@ textarea {
   width: 500px;
 }
 
-/* .input-area {
-  display: flex;
-  flex-direction: row;
+.namesList {
+  color: green;
 }
 
-.names-list {
-  margin-left: 400px;
-} */
+.exclusionList {
+  color: red;
+}
+
+.assignmentText {
+  color: green;
+}
