--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,96 @@
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  font: 14px "Arial", sans-serif;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 h1 {
-  font: 30px "Century Gothic", Futura, sans-serif;
+  font: 40px "Brush Script MT", sans-serif;
+  margin-bottom: 0px;
 }
 
 h2 {
-  font: 20px "Century Gothic", Futura, sans-serif;
+  font: 20px "Arial", sans-serif;
+  text-align: center;
+  background-color: black;
+  color: white;
+  padding: 5px
 }
 
 textarea {
-  border: 1px solid rgb(90, 90, 90); 
+  border: 1px solid gray; 
   padding: 5px;
-  height: 100px;
-  width: 500px;
+  height: 75px;
+  width: 90%
 }
 
-.namesList {
-  color: green;
+button {
+  padding: 5px;
 }
 
-.exclusionList {
-  color: red;
+#namesHeader {
+  background-color: green;
+}
+
+#exclusionsHeader {
+  background-color: indianred;
+}
+
+#randomizeHeader {
+  background-color: gray;
+}
+
+.names {
+  float: left;
+  width: 30%;
+}
+
+.exclusions {
+  float: left;
+  width: 30%;
+  padding-left: 20px;
+}
+
+.output {
+  float: left;
+  width: 30%;
+  padding-left: 20px;
 }
 
 .assignmentText {
   color: green;
+}
+
+.clearfix{
+  clear:both;
+}
+
+.input {
+  font: 14px "Courier New", sans-serif;
+  color: black;
+  background-color: mistyrose; 
+}
+
+.example {
+  color: gray;
+}
+
+.green {
+  color: green;
+  border: 1px solid green;
+  width: 90%;
+}
+
+.red {
+  color: red;
+  border: 1px solid red;
+  width: 90%;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
 }
